trunk/Archive2/28/f5a666997d6832/output
main.cpp:5:71: error: expected unqualified-id
    bool operator()(Class * other){ return (*this->operation)((other->(*this->method))(), this->data); }
                                                                      ^
1 error generated.
